<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/AppTheme.FloatingLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:hint="@string/nombre_completo"
                android:inputType="text"
                android:theme="@style/AppTheme.EditText"
                app:hintTextAppearance="@style/AppTheme.FloatingLabel" />

        </android.support.design.widget.TextInputLayout>

         <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:descendantFocusability="beforeDescendants"
             android:focusableInTouchMode="true"
             android:ems="10"
        android:id="@+id/editText3"
        android:hint="@string/Fecha"/>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/AppTheme.FloatingLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:inputType="number"
                android:theme="@style/AppTheme.EditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/AppTheme.FloatingLabel">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:theme="@style/AppTheme.EditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/AppTheme.FloatingLabel">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion_contacto"
                android:inputType="text"
                android:theme="@style/AppTheme.EditText" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonValidate"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:onClick="onClick"
            android:text="@string/siguiente" />

    </LinearLayout>


